crates/squawk_parser/tests/snapshots/tests__plpgsql_null_stmt_ok.snap
---
source: crates/squawk_parser/tests/tests.rs
input_file: crates/squawk_parser/tests/data/plpgsql/ok/null_stmt.sql
---
PLPGSQL
  PLPGSQL_NULL_STMT
    NULL_KW "null"
    SEMICOLON ";"
  WHITESPACE "\n"
