crates/squawk_parser/tests/snapshots/tests__plpgsql_unrecognized_stmt_err.snap
---
source: crates/squawk_parser/tests/tests.rs
input_file: crates/squawk_parser/tests/data/plpgsql/err/unrecognized_stmt.sql
---
PLPGSQL
  ERROR
    BEGIN_KW "begin"
  WHITESPACE " "
  PLPGSQL_NULL_STMT
    NULL_KW "null"
    SEMICOLON ";"
  WHITESPACE " "
  ERROR
    END_KW "end"
  WHITESPACE "\n"
---
error[syntax-error]: expected a statement, found BEGIN_KW
  ╭▸ 
1 │ begin null; end
  ╰╴━
error[syntax-error]: expected a statement, found END_KW
  ╭▸ 
1 │ begin null; end
  ╰╴            ━
