crates/squawk_parser/tests/snapshots/tests__prepare_err.snap
---
source: crates/squawk_parser/tests/tests.rs
input_file: crates/squawk_parser/tests/data/err/prepare.sql
---
SOURCE_FILE
  COMMENT "-- missing commas"
  WHITESPACE "\n"
  PREPARE
    PREPARE_KW "PREPARE"
    WHITESPACE " "
    PREPARED_STATEMENT
      IDENT "fooplan"
    WHITESPACE " "
    PARAM_LIST
      L_PAREN "("
      PARAM
        PATH_TYPE
          PATH_REF
            PATH_SEGMENT_REF
              INT_KW "int"
      WHITESPACE "  "
      PARAM
        PATH_TYPE
          PATH_REF
            PATH_SEGMENT_REF
              TEXT_KW "text"
      WHITESPACE "  "
      PARAM
        PATH_TYPE
          PATH_REF
            PATH_SEGMENT_REF
              IDENT "bool"
      COMMA ","
      WHITESPACE " "
      PARAM
        PATH_TYPE
          PATH_REF
            PATH_SEGMENT_REF
              NUMERIC_KW "numeric"
      R_PAREN ")"
    WHITESPACE " "
    AS_KW "AS"
    WHITESPACE "\n    "
    INSERT
      INSERT_KW "INSERT"
      WHITESPACE " "
      INTO_KW "INTO"
      WHITESPACE " "
      RELATION_NAME_REF
        PATH_REF
          PATH_SEGMENT_REF
            IDENT "foo"
      WHITESPACE " "
      VALUES
        VALUES_KW "VALUES"
        ROW_LIST
          ROW
            L_PAREN "("
            LITERAL
              POSITIONAL_PARAM "$1"
            COMMA ","
            WHITESPACE " "
            LITERAL
              POSITIONAL_PARAM "$2"
            COMMA ","
            WHITESPACE " "
            LITERAL
              POSITIONAL_PARAM "$3"
            COMMA ","
            WHITESPACE " "
            LITERAL
              POSITIONAL_PARAM "$4"
            R_PAREN ")"
    SEMICOLON ";"
  WHITESPACE "\n"
---
error[syntax-error]: expected COMMA
  ╭▸ 
2 │ PREPARE fooplan (int  text  bool, numeric) AS
  ╰╴                    ━
error[syntax-error]: expected COMMA
  ╭▸ 
2 │ PREPARE fooplan (int  text  bool, numeric) AS
  ╰╴                          ━
